<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.ParticipantInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_black"
                android:gravity="center"
                android:text="@string/participant_info_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="@color/screenlake_light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_what_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_what_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_collects_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_collects_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_not_collects_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_not_collects_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_data_goes_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_data_goes_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_permissions_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_permissions_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_daily_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_daily_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_battery_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_battery_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_stop_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/participant_info_stop_body"
                android:textColor="@color/screenlake_light_gray"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/participant_info_close_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:background="@drawable/standart_rounding"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/participant_info_close"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
